# flask-react-azure-helloworld

./: .gitignore  app.py  pyproject.toml
.github/workflows/: main_danielhelloworld.yml
front/: package-lock.json  package.json
front/src/: App.jsx
