[tool.poetry]
name = "helloworld"
version = "0.1.0"
description = ""
authors = ["Daniel Sadavoy <daniel.sadavoy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "*"
flask-restful = "^0.3.9"
flask-cors = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
